# power-games-simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_中文.md  RELEASE_NOTES.md  TEST_REPORT.md  build.bat  build.sh  build_release.bat
.trae/skills/code-reviewer/: SKILL.md
.trae/skills/frontend-design/: SKILL.md
.trae/skills/minimax-multimodal-toolkit/: SKILL.md
.trae/skills/pr-creator/: SKILL.md
.trae/skills/webapp-testing/: SKILL.md
Content/Art/Characters/: agent_nightingale.txt  chen_weiming.txt  commander_fire.txt  minister_zhang.txt  sarah_jenkins.txt  victor_shadow.txt
Content/Art/Prototypes/: character_prototype.html  scene_ui_prototype.html
Content/Art/Scenes/: parliament.txt  war_room.txt
Content/Art/UI/: character_portraits.txt  end_game_evaluation.txt  endings_art.txt  faction_icons.txt  factions_personnel.txt  intelligence_network.txt  main_dashboard.txt  resource_economy.txt  strategic_decision.txt  talent_recruitment.txt  title_screen.txt  treaty_negotiation.txt
Content/Audio/: audio_config.json
Data/Characters/: characters.json
Data/Config/: game_config.json
Data/Endings/: endings.json
Docs/: API_REFERENCE.md  ASSET_INTEGRATION_GUIDE.md  DEVELOPMENT_PLAN.md  github_setup.md
Docs/GDD/: game_design_document.md
Packaging/: PowerGame.iss  build_installer.bat  package_game.bat
Resources/: PowerGame.rc
Source/PowerGame/AI/: AIDecisionEngine.cpp  AIDecisionEngine.h
Source/PowerGame/Alliance/: AllianceManager.cpp  AllianceManager.h
Source/PowerGame/Audio/: AudioManager.cpp  AudioManager.h
Source/PowerGame/Character/: CharacterManager.cpp  CharacterManager.h
Source/PowerGame/Core/: EventBus.h  GameManager.cpp  GameManager.h  GameSystem.h
Source/PowerGame/Data/: SaveManager.cpp  SaveManager.h
Source/PowerGame/Ending/: EndingManager.cpp  EndingManager.h
Source/PowerGame/Faction/: FactionManager.cpp  FactionManager.h
Source/PowerGame/GUI/: AnimationSystem.cpp  AnimationSystem.h  CharacterPanel.cpp  CharacterPanel.h  FactionPanel.cpp  FactionPanel.h  GUIComponents.cpp  GUIComponents.h  GUIRenderer.cpp  GUIRenderer.h  GameHUD.cpp  GameHUD.h  GameScene.cpp  GameScene.h  IntelligencePanel.cpp  IntelligencePanel.h  MainMenuScene.cpp  MainMenuScene.h  SaveLoadPanel.cpp  SaveLoadPanel.h  StoryEventPanel.cpp  StoryEventPanel.h  TutorialSystem.cpp  TutorialSystem.h
Source/PowerGame/Game/: AchievementSystem.cpp  AchievementSystem.h  ConsoleGame.h  GUIGame.cpp  GUIGame.h  GameApplication.cpp  GameApplication.h  GameStateManager.cpp  GameStateManager.h
Source/PowerGame/Intelligence/: IntelligenceManager.cpp  IntelligenceManager.h
Source/PowerGame/Resources/: ResourceManager.cpp  ResourceManager.h
Source/PowerGame/Story/: StoryManager.cpp  StoryManager.h
Source/PowerGame/Strategy/: StrategyManager.cpp  StrategyManager.h
Source/PowerGame/UI/: UIManager.cpp  UIManager.h
Tests/UnitTests/: unit_tests.cpp
Tools/: create_github_repo.py
Tools/AITrainer/: ai_trainer.py
Tools/AssetGenerator/: game_asset_generator.py  minimax_asset_generator.py
Tools/DataAnalyzer/: data_analyzer.py
stitch_political_intrigue_simulator/stitch_political_intrigue_simulator/: power_game_design_document.md
stitch_political_intrigue_simulator/stitch_political_intrigue_simulator/end_game_evaluation/: code.html
stitch_political_intrigue_simulator/stitch_political_intrigue_simulator/factions_personnel/: code.html
stitch_political_intrigue_simulator/stitch_political_intrigue_simulator/intel_analysis_detail/: code.html
stitch_political_intrigue_simulator/stitch_political_intrigue_simulator/intelligence_network/: code.html
stitch_political_intrigue_simulator/stitch_political_intrigue_simulator/main_dashboard_war_room/: code.html
stitch_political_intrigue_simulator/stitch_political_intrigue_simulator/midnight_protocol/: DESIGN.md
stitch_political_intrigue_simulator/stitch_political_intrigue_simulator/resource_economy_conversion/: code.html
stitch_political_intrigue_simulator/stitch_political_intrigue_simulator/spy_deployment_map/: code.html
stitch_political_intrigue_simulator/stitch_political_intrigue_simulator/strategic_decision/: code.html
stitch_political_intrigue_simulator/stitch_political_intrigue_simulator/talent_recruitment/: code.html
stitch_political_intrigue_simulator/stitch_political_intrigue_simulator/treaty_negotiation_alliances/: code.html
